# mclinker

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE.TXT  Makefile.am  Makefile.am.cpplint  READEME.txt  README  README.md  TODO  VERSION  VERSION.in  autogen.sh  configure  configure.ac  index.html  libtool  params.json  test.cpp
bold/: COPYING  Makefile.am  README  autogen.sh  configure.ac
bold/debug/: Makefile.am
bold/m4/: llvm.m4
bold/scripts/: envsetup.sh  normal_files.sh
bold/src/: main.cpp
bold/templates/: header.h  headerTest.h  impl.cpp  implTest.cpp
bold/utils/: README.bold
debug/: Makefile.am
include/: Makefile.am
include/mcld/: AttributeOption.h  AttributeOptions.h  BitcodeOption.h  Environment.h  GeneralOptions.h  IRBuilder.h  InputTree.h  Linker.h  LinkerConfig.h  LinkerScript.h  Module.h  ScriptOptions.h  TargetOptions.h
lib/: CMakeLists.txt  Makefile.am
lib/ADT/: Allocators.cpp  CMakeLists.txt  PZString.cpp  PZStringFactory.cpp  StringEntry.cpp
lib/CodeGen/: CMakeLists.txt  Environment.cpp  LDPrinter.cpp  LLVMTargetMachine.cpp  MCLDTargetMachine.cpp  MCLinker.cpp  SectLinker.cpp  SectLinkerOption.cpp  TargetMachine.cpp
lib/Core/: AttributeOption.cpp  AttributeOptions.cpp  BitcodeOption.cpp  CMakeLists.txt  Environment.cpp  GeneralOptions.cpp  IRBuilder.cpp  InputTree.cpp  Linker.cpp  LinkerConfig.cpp  LinkerScript.cpp  Module.cpp  ScriptOptions.cpp  TargetOptions.cpp
lib/Fragment/: AlignFragment.cpp  CMakeLists.txt  FillFragment.cpp  Fragment.cpp  FragmentLinker.cpp  FragmentRef.cpp  NullFragment.cpp  RegionFragment.cpp  Relocation.cpp  Stub.cpp
lib/LD/: AlignFragment.cpp  Archive.cpp  ArchiveReader.cpp  BSDArchiveReader.cpp  BinaryReader.cpp  BinaryWriter.cpp  BranchIsland.cpp  BranchIslandFactory.cpp  CIE.cpp  CMakeLists.txt  DWARFLineInfo.cpp  DebugString.cpp  Diagnostic.cpp  DiagnosticEngine.cpp  DiagnosticInfo.cpp  DiagnosticInfos.cpp  DiagnosticLineInfo.cpp  DiagnosticPrinter.cpp  DumbDiagnostic.cpp  DynObjFormat.cpp  DynObjReader.cpp  DynObjWriter.cpp  ELFBinaryReader.cpp  ELFBinaryWriter.cpp  ELFDSOWriter.cpp  ELFDynObjFileFormat.cpp  ELFDynObjFromat.cpp  ELFDynObjReader.cpp  ELFDynObjWriter.cpp  ELFEXEWriter.cpp  ELFExecFileFormat.cpp  ELFExecWriter.cpp  ELFFileFormat.cpp  ELFObjectFileFormat.cpp  ELFObjectReader.cpp  ELFObjectWriter.cpp  ELFReader.cpp  ELFReaderIf.cpp  ELFSectionMap.cpp  ELFSegment.cpp  (+64 more)
lib/LDScriptReader/: MCLDScriptReader.cpp
lib/MC/: Attribute.cpp  AttributeFactory.cpp  AttributeSet.cpp  CMakeLists.txt  CommandAction.cpp  ContextFactory.cpp  ELFLDWriter.cpp  ELFLDWriter.h  FileAction.cpp  Input.cpp  InputAction.cpp  InputBuilder.cpp  InputFactory.cpp  InputTree.cpp  MCArchiveReader.cpp  MCAsmObjectReader.cpp  MCBitcodeInterceptor.cpp  MCELFArchiveReader.cpp  MCELFArchiveTargetReader.cpp  MCELFLDTargetWriter.cpp  MCELFObjectReader.cpp  MCELFObjectTargetReader.cpp  MCELFObjectTargetWriter.cpp  MCELFObjectWriter.cpp  MCFragmentRef.cpp  MCGNUArchiveReader.cpp  MCLDAttribute.cpp  MCLDCommand.cpp  MCLDContext.cpp  MCLDDirectory.cpp  MCLDDriver.cpp  MCLDFile.cpp  MCLDFileTree.cpp  MCLDInfo.cpp  MCLDInput.cpp  MCLDInputFileList.cpp  MCLDInputTree.cpp  MCLDOptions.cpp  MCLDOutput.cpp  MCLinker.cpp  (+9 more)
lib/Object/: CMakeLists.txt  ObjectBuilder.cpp  ObjectLinker.cpp  SectionMap.cpp  SectionRules.cpp
lib/Script/: AssertCmd.cpp  Assignment.cpp  BinaryOp.cpp  CMakeLists.txt  EntryCmd.cpp  FileToken.cpp  GroupCmd.cpp  InputCmd.cpp  InputSectDesc.cpp  InputToken.cpp  NameSpec.cpp  NullaryOp.cpp  Operand.cpp  Operator.cpp  OutputArchCmd.cpp  OutputCmd.cpp  OutputFormatCmd.cpp  OutputSectDesc.cpp  RpnEvaluator.cpp  RpnExpr.cpp  ScriptCommand.cpp  ScriptFile.cpp  ScriptInput.cpp  ScriptParser.cc  ScriptParser.h  ScriptParser.yy  ScriptReader.cpp  ScriptScanner.cc  ScriptScanner.h  ScriptScanner.ll  SearchDirCmd.cpp  SectionsCmd.cpp  StrToken.cpp  StringList.cpp  TernaryOp.cpp  UnaryOp.cpp  WildcardPattern.cpp  location.hh  position.hh  stack.hh
lib/Support/: CMakeLists.txt  CommandLine.cpp  DefSymParser.cpp  Demangle.cpp  Directory.cpp  FileHandle.cpp  FileOutputBuffer.cpp  FileSystem.cpp  HandleToArea.cpp  LEB128.cpp  LinkerErrors.cpp  MemoryArea.cpp  MemoryAreaFactory.cpp  MemoryRegion.cpp  MsgHandler.cpp  MsgHandling.cpp  Path.cpp  PathSet.cpp  RealPath.cpp  RegionFactory.cpp  ScopedWriter.cpp  SearchDirs.cpp  Space.cpp  SystemUtils.cpp  Target.cpp  TargetRegistry.cpp  ToolOutputFile.cpp  UniqueGCFactory.cpp  raw_mem_ostream.cpp  raw_ostream.cpp
optimized/: Makefile.am
test/: Makefile  Makefile.am  Makefile.in  lit.cfg  lit.site.cfg.in
test/Archive/: README  empty_ar.ll  exec_exclude_libs.ll  exec_exclude_libs_all.ll  exec_group_1.ll  exec_group_2.ll  exec_irix6_ar_1.ll  exec_nested_ar.ll  exec_thin_ar_1.ll  exec_thin_ar_2.ll  exec_whole_ar_1.ll  exec_whole_ar_2.ll
test/Commands/: README  opt_Bshareable_w_output.ll  opt_Bshareable_wo_output.ll  opt_build_id.ll  opt_color_always.ll  opt_color_never.ll  opt_defsym.ll  opt_no_object.ll  opt_nooptions.ll  opt_shared_w_Ttext_Tdata_Tbss.ll  opt_shared_w_as_needed.ll  opt_shared_w_long_output.ll  opt_shared_w_output.ll  opt_shared_w_section_start.ll  opt_shared_w_z_defs.ll  opt_shared_w_z_execstack.ll  opt_shared_w_z_flags.ll  opt_shared_w_z_now.ll  (+5 more)
unittests/: BinTreeTest.cpp  BinTreeTest.h  DirIteratorTest.cpp  DirIteratorTest.h  ELFBinaryReaderTest.cpp  ELFBinaryReaderTest.h  ELFReaderTest.cpp  ELFReaderTest.h  FactoriesTest.cpp  FactoriesTest.h  FileHandleTest.cpp  FileHandleTest.h  FragmentRefTest.cpp  FragmentRefTest.h  FragmentTest.cpp  FragmentTest.h  GCFactoryListTraitsTest.cpp  GCFactoryListTraitsTest.h  GraphTest.cpp  GraphTest.h  HashTableTest.cpp  HashTableTest.h  InputTreeTest.cpp  InputTreeTest.h  LDSymbolTest.cpp  LDSymbolTest.h  LEB128Test.cpp  LinearAllocatorTest.cpp  LinearAllocatorTest.h  LinkerTest.cpp  MCArchiveReaderTest.cpp  MCArchiveReaderTest.h  MCFragmentRefTest.cpp  MCFragmentRefTest.h  MCObjectReaderTest.cpp  MCObjectReaderTest.h  MCRegionFragmentTest.cpp  MCRegionFragmentTest.h  Makefile.am  MemoryArea-write.txt  (+36 more)
(+829 files in other folders)
