#   Copyright (C) 2011-
#   Embedded and Web Computing Lab, National Taiwan University
#   MediaTek, Inc.
#

##############################################################################
### WARNING: this file contains embedded tabs.  Do not run untabify on this file.


####################
#  Versioning, see VERSION
MAJOR=0
MINOR=0
CHANGE=0
AGE=0

DEV_VERSION="$MAJOR.$MINOR.$CHANGE.$AGE"
PKG_VERSION="$MAJOR.$MINOR.$CHANGE"


####################
#  Autoconf/Automake Initialization
AC_PREREQ(2.59)

AC_INIT([bold],[0.0.0],[jush.msn@gmail.com])
AM_INIT_AUTOMAKE


####################
#  CPP
AC_PROG_CXX

####################
#  Check for libraries

####################
# OUTPUT
AC_CONFIG_FILES([
	Makefile
	debug/Makefile
	optimized/Makefile
])

AC_OUTPUT
